fixed the off center layout

--- a/13unit/scss/_large.scss
+++ b/13unit/scss/_large.scss
@@ -1,3 +1,4 @@
 #main__weatherDiv {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
