--- a/13unit/scss/_medium.scss
+++ b/13unit/scss/_medium.scss
@@ -1,3 +1,3 @@
 #main__weatherDiv {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
 }
